@@ -1,5 +1,5 @@
 <Type Name="CellRendererMode" FullName="Gtk.CellRendererMode">
-  <TypeSignature Language="C#" Maintainer="auto" Value="public enum CellRendererMode;" />
+  <TypeSignature Language="C#" Maintainer="John Luke" Value="public enum CellRendererMode;" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Identifies how the user can interact with a particular cell.</summary>
+    <remarks />
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,8 +34,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The cell is just for display and cannot be interacted with.</summary>
+        <remarks>Note that this does not mean that the row being drawn can not be selected, for example.  Just that a particular element of it cannot be individually modified.</remarks>
       </Docs>
     </Member>
     <Member MemberName="Activatable">
@@ -46,8 +46,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The cell can be clicked.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Editable">
@@ -58,8 +58,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The cell can be edited or otherwise modified.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="value__">
