@@ -1,5 +1,5 @@
 <Type Name="CellRendererState" FullName="Gtk.CellRendererState">
-  <TypeSignature Language="C#" Maintainer="auto" Value="public enum CellRendererState;" />
+  <TypeSignature Language="C#" Maintainer="John Luke" Value="public enum CellRendererState;" />
   <AssemblyInfo>
     <AssemblyName>gtk-sharp</AssemblyName>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -7,8 +7,8 @@
   </AssemblyInfo>
   <ThreadSafetyStatement>Gtk# is thread aware, but not thread safe; See the <link location="node:gtk-sharp/programming/threads">Gtk# Thread Programming</link> for details.</ThreadSafetyStatement>
   <Docs>
-    <summary>To be added</summary>
-    <remarks>To be added</remarks>
+    <summary>Tells how a cell is to be rendered.</summary>
+    <remarks />
   </Docs>
   <Base>
     <BaseTypeName>System.Enum</BaseTypeName>
@@ -34,8 +34,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The cell is currently selected, and probably has a selection colored background to render to.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Prelit">
@@ -46,8 +46,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The mouse is hovering over the cell.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Insensitive">
@@ -58,8 +58,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The cell is drawn in an insensitive manner.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="Sorted">
@@ -70,8 +70,8 @@
       </ReturnValue>
       <Parameters />
       <Docs>
-        <summary>To be added</summary>
-        <remarks>To be added</remarks>
+        <summary>The cell is in a sorted row.</summary>
+        <remarks />
       </Docs>
     </Member>
     <Member MemberName="value__">
