@@ -1,3 +1,8 @@
+2003-07-17  John Luke  <jluke@cfl.rr.com>
+	
+	* en/Gtk/CellRendererMode.xml: documented
+	* en/Gtk/CellRendererState.xml: documented
+	
 2003-07-17  Duncan Mak  <duncan@ximian.com>
 
 	* Added new documentation files for the new classes, and fixed the
